--- a/Hotel/Hotel/Views/Shared/Components/Header/Default.cshtml
+++ b/Hotel/Hotel/Views/Shared/Components/Header/Default.cshtml
@@ -38,11 +38,9 @@
                                         <a href="#">Home</a>
                                     </li>
                                     <li>
-                                        <a href="#">Room</a>
+                                        <a asp-action="Room">Room</a>
                                     </li>
-                                    <li>
-                                        <a href="#">Blog</a>
-                                    </li>
+                                    
                                     <li><a href="contact.html">Contact</a></li>
                                 </ul>
                             </div>
