--- a/Hotel/Hotel/Areas/Admin/Views/Room/Create.cshtml
+++ b/Hotel/Hotel/Areas/Admin/Views/Room/Create.cshtml
@@ -5,8 +5,9 @@
 }
 
 <div class="page-content">
-    <h2>Create Room</h2>
     <form asp-action="Create" method="post" enctype="multipart/form-data">
+        <h2>Create Room</h2>
+
         <div class="form-group" style="margin-top: 0.3%;">
             <label asp-for="RoomNumber" class="control-label"></label>
             <input asp-for="RoomNumber" class="form-control" />
@@ -28,9 +29,24 @@
             <span asp-validation-for="Price" class="text-danger"></span>
         </div>
         <div class="form-group" style="margin-top: 1%;">
-            <label asp-for="ImageFile" class="control-label"></label>
-            <input asp-for="ImageFile" class="form-control" />
-            <span asp-validation-for="ImageFile" class="text-danger"></span>
+            <label asp-for="Bathrooms" class="control-label"></label>
+            <input asp-for="Bathrooms" class="form-control" />
+            <span asp-validation-for="Price" class="text-danger"></span>
+        </div>
+        <div class="form-group" style="margin-top: 1%;">
+            <label asp-for="Beds" class="control-label"></label>
+            <input asp-for="Beds" class="form-control" />
+            <span asp-validation-for="Beds" class="text-danger"></span>
+        </div>
+        <div class="form-group" style="margin-top: 1%;">
+            <label asp-for="Rating" class="control-label"></label>
+            <input asp-for="Rating" class="form-control" />
+            <span asp-validation-for="Rating" class="text-danger"></span>
+        </div>
+        <div class="form-group" style="margin-top: 1%;">
+            <label asp-for="ImageFiles" class="control-label"></label>
+            <input asp-for="ImageFiles" class="form-control" />
+            <span asp-validation-for="ImageFiles" class="text-danger"></span>
         </div>
         <div class="form-group" style="margin-top: 1%;">
             <label asp-for="CheckIn" class="control-label"></label>
