--- a/Hotel/Hotel/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/Hotel/Hotel/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -235,7 +235,7 @@
                         </li>
                         <li>
                             <a asp-controller="RoomStatus" asp-action="Index">
-                                <i class="fa fa-home"></i>
+                                <i class="bx bx-time-five"></i>
                                 <span data-key="t-dashboard">Room Status</span>
                             </a>
                         </li>
