--- a/Hotel/Hotel/Areas/Admin/Views/_ViewImports.cshtml
+++ b/Hotel/Hotel/Areas/Admin/Views/_ViewImports.cshtml
@@ -4,3 +4,4 @@
 @using Hotel.ViewModels.AboutCompany
 @using Hotel.ViewModels.Room
 @using Hotel.ViewModels.RoomStatus
+@using Hotel.ViewModels.Features
