--- a/Hotel/Hotel/Views/Shared/Components/Footer/Default.cshtml
+++ b/Hotel/Hotel/Views/Shared/Components/Footer/Default.cshtml
@@ -7,7 +7,7 @@
                     <div class="footer-logo mb-25">
                         <a href="index.html"><img src="~/assets/images/logos/logo.png" alt="Logo"></a>
                     </div>
-                    <p>Nam libero tempore cum soluta nobis eseligendi optio cumque nihile impedit quo minus maxime placeat facere</p>
+                    <p>Our hotel offers luxurious rooms, exceptional dining, a state-of-the-art fitness center, and a serene spa. Enjoy stunning beaches, a relaxing jacuzzi, a sparkling swimming pool, and convenient transportation services.</p>
                     <div class="social-style-one pt-10">
                         <a href="#"><i class="fab fa-facebook-f"></i></a>
                         <a href="#"><i class="fab fa-twitter"></i></a>
@@ -20,11 +20,8 @@
                 <div class="footer-widget widget_nav_menu wow fadeInUp delay-0-4s">
                     <h4 class="footer-title">Quick Links</h4>
                     <ul class="list-style-one">
-                        <li><a href="about.html">About company</a></li>
-                        <li><a href="about.html">History</a></li>
-                        <li><a href="about.html">Team Member</a></li>
-                        <li><a href="blog.html">Latest News</a></li>
-                        <li><a href="contact.html">Contact Us</a></li>
+                        <li><a asp-action="Index" asp-controller="Rooms">Rooms</a></li>
+                        <li><a asp-action="Index" asp-controller="Contact">Contact Us</a></li>
                     </ul>
                 </div>
             </div>
@@ -32,21 +29,12 @@
                 <div class="footer-widget widget_nav_menu wow fadeInUp delay-0-4s">
                     <h4 class="footer-title">Features</h4>
                     <ul class="list-style-one">
-                        <li><a href="room-details.html">Free Transportation</a></li>
-                        <li><a href="room-details.html">GYM & Fitness Care</a></li>
-                        <li><a href="room-details.html">SPA Treatment</a></li>
-                        <li><a href="room-details.html">Food & Drinks</a></li>
-                        <li><a href="room-details.html">Breakfast</a></li>
+                        <li><p>Free Transportation</p></li>
+                        <li><p>GYM & Fitness Care</p></li>
+                        <li><p>SPA Treatment</p></li>
+                        <li><p>Food & Drinks</p></li>
+                        <li><p>Breakfast</p></li>
                     </ul>
-                </div>
-            </div>
-            <div class="col-xl-3 col-sm-6">
-                <div class="footer-widget widget_newsletter wow fadeInUp delay-0-6s">
-                    <h4 class="footer-title">Newsletter</h4>
-                    <form action="#">
-                        <input type="email" placeholder="Enter Address" required>
-                        <button class="theme-btn">Subscribe <i class="far fa-angle-right"></i></button>
-                    </form>
                 </div>
             </div>
         </div>
@@ -56,7 +44,7 @@
             <div class="row">
                 <div class="col-lg-6">
                     <div class="copyright-text">
-                        <p>© 2023 <a href="index.html">Qomfort.</a> All Rights Reserved.</p>
+                        <p>© 2023 Caspian Horizon. All Rights Reserved.</p>
                     </div>
                 </div>
                 <div class="col-lg-6 text-lg-end">
