--- a/Hotel/Hotel/Views/Shared/Components/Header/Default.cshtml
+++ b/Hotel/Hotel/Views/Shared/Components/Header/Default.cshtml
@@ -35,10 +35,10 @@
                             <div class="navbar-collapse collapse clearfix">
                                 <ul class="navigation clearfix">
                                     <li>
-                                        <a href="#">Home</a>
+                                        <a asp-action="Index" asp-controller="Home">Home</a>
                                     </li>
                                     <li>
-                                        <a asp-action="Room">Room</a>
+                                        <a asp-controller="Room" asp-action="Index">Room</a>
                                     </li>
                                     
                                     <li><a href="contact.html">Contact</a></li>
